fix: smaller pip window on mobile :iphone:

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -454,9 +454,8 @@ img {
     position: fixed;
     transform: translateY(100%);
     top: 0;
-    left: 0;
-    // width: 20rem;
-    width: 98vw;
+    left: 5vw;
+    width: 90vw;
     height: 15;
     animation: fade-in-up .25s ease forwards;
     
